Fixed nav spacing.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ canvas {
 .MainNav {
     background-color: #333;
     overflow: hidden;
+    position: relative;
 }
 
 .MainNav a{
